err/amusement.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/amusement'...
Listing './lib/python3.5/site-packages/amusement/config'...
Listing './lib/python3.5/site-packages/amusement/parks'...
Listing './lib/python3.5/site-packages/amusement/parks/disney'...
Listing './lib/python3.5/site-packages/amusement/parks/seaworld'...
Listing './lib/python3.5/site-packages/amusement/parks/universal'...
Compiling './lib/python3.5/site-packages/amusement/parks/universal/UniversalHollywood.py'...
***   File "./lib/python3.5/site-packages/amusement/parks/universal/UniversalHollywood.py", line 26
    print "%s - row invalid" % table_row
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/amusement/parks/universal/UniversalJapan.py'...
***   File "./lib/python3.5/site-packages/amusement/parks/universal/UniversalJapan.py", line 20
    print 'USJ - nothing appeared'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/amusement/parks/universal/UniversalSingapore.py'...
***   File "./lib/python3.5/site-packages/amusement/parks/universal/UniversalSingapore.py", line 38
    print attraction.contenttype.text
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/amusement/scripts'...
Compiling './lib/python3.5/site-packages/amusement/scripts/cli.py'...
***   File "./lib/python3.5/site-packages/amusement/scripts/cli.py", line 49
    print park.shows()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/amusement/test'...
Listing './lib/python3.5/site-packages/amusement/test/generic'...
Listing './lib/python3.5/site-packages/amusement/test/parks'...
Compiling './lib/python3.5/site-packages/amusement/test/parks/parkcheck.py'...
***   File "./lib/python3.5/site-packages/amusement/test/parks/parkcheck.py", line 3
    print 'Bad park name'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/amusement-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.5.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
